# KNORR

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  README.md  knorr.py  pyproject.toml
.github/workflows/: ci.yml  security.yml
_tools/: export_findings.py  reject_fps.py  screened_count.py
docs/plans/: 01 PRD.md
src/knorr/: __init__.py  artifacts.py  cli.py  config.py  db.py  env.py  hunt.py  models.py  watch.py
src/knorr/dashboard/: __init__.py  app.py
src/knorr/feeds/: __init__.py  github.py  osm.py
src/knorr/registry/: __init__.py  dockerhub.py
src/knorr/scanning/: __init__.py  confidence.py  config_scan.py  discovery.py  dockerfile.py  gate.py  ghcr_refs.py  hosts.py  iocs.py  tier2.py
tests/: test_artifacts.py  test_cli.py  test_config_scan.py  test_dashboard.py  test_db.py  test_discovery.py  test_dockerfile.py  test_feeds_osm.py  test_gate.py  test_ghcr_refs.py  test_hosts.py  test_hunt.py  test_iocs.py  test_models.py  test_osm_submit.py  test_registry.py  test_tier2_ignore.py  test_watch.py
