[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knorr"
version = "0.1.0"
description = "Malicious Container Intelligence Engine (static analysis only)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
# Deliberately tiny runtime footprint: the core hunt needs only requests. The
# heavy static analysis is shelled out to Trivy (a separate binary), never
# reimplemented. No pydantic dependency, so the pipeline runs cleanly on 3.14.
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
]

[project.scripts]
knorr = "knorr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# The dashboard is a single-file inline HTML/JS/CSS template; wrapping markup
# to satisfy a Python line-length rule would hurt its own readability more than
# it helps. Wallet addresses and crypto strings in test fixtures are opaque
# tokens that should never be wrapped mid-string either.
"src/knorr/dashboard/app.py" = ["E501"]
"tests/test_osm_submit.py" = ["E501"]
"tests/test_iocs.py" = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
